# quantumlane

./: .env.example  .gitignore  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
api/: Dockerfile  pyproject.toml
api/src/quantumlane_api/: __init__.py  db.py  main.py  schemas.py  settings.py
api/tests/: conftest.py  test_smoke.py
db/migrations/: 0001_init.sql  0002_static_gtfs.sql  0003_realtime.sql  0004_ops.sql  0005_bootstrap_partitions.sql
docs/: ARCHITECTURE.md
docs/adr/: 001-dagster-over-airflow.md  002-single-postgres-at-this-scale.md  003-single-vps-over-kubernetes.md  004-hetzner-over-aws.md  005-static-html-no-framework.md  006-raw-sql-migrations.md  009-no-streaming-framework.md  017-event-time-delay-stop-level-overwrite  README.md
ingestion/: Dockerfile  pyproject.toml
ingestion/src/quantumlane_ingestion/: __init__.py  definitions.py  parser.py  settings.py
ingestion/src/quantumlane_ingestion/assets/: __init__.py  ops.py  ttc.py
ingestion/src/quantumlane_ingestion/resources/: __init__.py  gtfs_rt.py  postgres.py  r2.py  s3.py
ingestion/tests/: test_parser.py
mcp/: Dockerfile  pyproject.toml
mcp/src/quantumlane_mcp/: __init__.py  api_client.py  ratelimit.py  server.py
mcp/tests/: conftest.py  test_tools.py
ops/compose/: Caddyfile  dagster.yaml  docker-compose.yml  workspace.yaml
ops/dagster/: Dockerfile
ops/scripts/: backup.sh  deploy.sh  migrate.py
spark/: README.md  archive_test.py  explore.py  headway_reliability.py
website/: architecture.html  connect.html  explore.html  freshness.html  index.html  mcp.html
website/static/: app.js  styles.css
