[project]
name = "quantumlane-ingestion"
version = "0.1.0"
description = "Dagster project for ingesting GTA transit data into QuantumLane."
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.9.0,<2.0",
    "dagster-webserver>=1.9.0,<2.0",
    "dagster-postgres>=0.25.0,<1.0",
    "psycopg[binary,pool]>=3.2.0",
    "sqlalchemy>=2.0.30",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "gtfs-realtime-bindings>=1.0.0",
    "protobuf>=5.28.0",
    "pandas>=2.2.0",
    "pyarrow>=17.0.0",
    "boto3>=1.35.0",                   # for AWS S3 cold tier
    "structlog>=24.4.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-protobuf",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.dagster]
module_name = "quantumlane_ingestion.definitions"
code_location_name = "quantumlane"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true   # gtfs-realtime-bindings has no stubs

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
