[project]
name = "quantumlane-mcp"
version = "0.1.0"
description = "MCP server exposing QuantumLane TTC transit data as tools for LLM clients."
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",      # httpx mocking for unit tests
]

[project.scripts]
quantumlane-mcp = "quantumlane_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quantumlane_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]